@@ -1,5 +1,7 @@
 2007-05-22  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Fixed bug 440177.
+
 	* plugins/interface_view.glade: 
 	* plugins/interface_view.py: Limit selection view populating to 
 	50 children (bug 440269).
